<resources>
    <string name="app_name">NotesThree</string>
    <string name="notes">Notes</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="add">Add</string>
    <string name="edit">Edit</string>
    <string name="details">Details</string>
    <string name="save">Save</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="no_notes">No notes</string>
    <string name="delete_note">Delete note</string>
    <string name="delete_all_notes">Delete all notes</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="enter_the_description">Enter the description</string>
    <string name="are_you_sure_you_want_to_delete_all_notes">Are you sure you want to delete all notes?</string>
    <string name="are_you_sure_you_want_to_permanently_delete_this_note">Are you sure you want to permanently delete this note?</string>
</resources>