<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/mImageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                app:layout_constraintDimensionRatio="H,1:1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                tools:src="@drawable/ic_launcher_background"
                tools:ignore="ContentDescription"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/mTextViewTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:ellipsize="end"
                android:maxLines="1"
                android:textAppearance="?attr/textAppearanceSearchResultTitle"
                android:fontFamily="@font/google_sans_bold"
                tools:text="@string/title"/>

            <TextView
                android:id="@+id/mTextViewDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:ellipsize="end"
                android:maxLines="3"
                android:textAppearance="?attr/textAppearanceSearchResultSubtitle"
                android:fontFamily="@font/google_sans_regular"
                tools:text="@string/description"/>

            <TextView
                android:id="@+id/mTextViewDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:alpha="0.4"
                android:textAppearance="?attr/textAppearanceSearchResultSubtitle"
                android:textSize="14sp"
                android:fontFamily="@font/google_sans_regular"
                tools:text="@string/date"/>

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>